objects/HealthCloudGA__EhrVirtualDeviceChannel__c.object
<CustomObject>
    <fields>
        <fullName>HealthCloudGA__CodeLabel__c</fullName>
        <label>Code Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CodeSystem__c</fullName>
        <description>Identity of the terminology system</description>
        <label>Code System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Code__c</fullName>
        <description>Gender Symbol in syntax defined by the system</description>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__EhrVirtualDevice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Groups related data items</description>
        <label>EHR Virtual Device</label>
        <referenceTo>HealthCloudGA__EhrVirtualDevice__c</referenceTo>
        <relationshipLabel>Virtual Device Channels</relationshipLabel>
        <relationshipName>VirtualDeviceChannels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IsRestricted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsRestricted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IsVisibleOnPatientCard__c</fullName>
        <description>If returns true, the record will appear on Patient Card</description>
        <formula>true</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsVisibleOnPatientCard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Metric__c</fullName>
        <description>Piece of data reported by device for Channel</description>
        <label>Metric</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Observation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The data for the metric</description>
        <label>Observation</label>
        <referenceTo>HealthCloudGA__EhrObservation__c</referenceTo>
        <relationshipLabel>Virtual Device Channels</relationshipLabel>
        <relationshipName>VirtualDeviceChannels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystemId__c</fullName>
        <externalId>true</externalId>
        <label>Source System ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystemModified__c</fullName>
        <description>When last updated</description>
        <label>Source System Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystem__c</fullName>
        <defaultValue>&quot;Health1-&quot;+$Organization.Id</defaultValue>
        <description>Identifies the system that created the record and owns update rights to it.</description>
        <inlineHelpText>Identifies the system that created the record and owns update rights to it. Defaults to Health1 for manually created records.</inlineHelpText>
        <label>Source System</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <label>EHR Virtual Device Channel</label>
    <nameField>
        <displayFormat>DevCh-{0}</displayFormat>
        <label>EHR Virtual Device Channel Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EHR Virtual Device Channels</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>